added per wf stuff to evaluation and a short entry in the appendix

--- a/mainmatter/05_evaluation.tex
+++ b/mainmatter/05_evaluation.tex
@@ -44,24 +44,66 @@ For the final comparison in the next section the 10 runs with the default config
 
 In this section the performance of the gradient bandit and the q-learning approaches over their last 10 runs will be compared with each other and with the performance of the default configuration and the approach using a feedback loop.
 
-The figures \ref{fig:cpu_results} and \ref{fig:mem_use} show how these approached performed. The left graph in the first figure shows the total amount of CPU hours used by all of the tasks across all of the workflows and the amount of CPU hours that were actually used (also called the effective CPU hours). Effective CPU hours are the CPU usage multiplied by the execution time whereas the CPU hours are just the number of CPUs assigned multiplied by the execution time. For example a task which was assigned 3 CPUs, ran for 1 hour and had 200\% CPU usage would have used 3 CPU hours but only 2 effective CPU hours. These values are calculated for each individual task and then summed up to give both the total CPU hours used and the actual CPU hours used.
+The figures \ref{fig:cpu_results} and \ref{fig:mem_use} show how these approaches performed. The left graph in the first figure shows the total amount of CPU hours used by all of the tasks across all of the workflows and the amount of CPU hours that were actually used (also called the effective CPU hours). Effective CPU hours are the CPU usage multiplied by the execution time whereas the CPU hours are just the number of CPUs assigned multiplied by the execution time. For example a task which was assigned 3 CPUs, ran for 1 hour and had 200\% CPU usage would have used 3 CPU hours but only 2 effective CPU hours. These values are calculated for each individual task and then summed up over all of the workflows.
 
-The right graph in this figure shows the total time it took for all of the workflows to complete. Additionally in \ref{fig:mem_use}, the memory usage is shown. The unit measured in the right graph of \ref{fig:mem_use} is the gigabyte hour and the graph displays the total amount of gigabyte hours allocated across all of the workflows as well as the actual amount of gigabyte hours used (based on each task’s peak RSS and execution time- this is the minimum amount of gigabyte hours which could have been assigned without the task being killed). The left graph shows the average memory usage across all of the tasks, where memory usages is considered the task’s peak RSS value divided by the total memory assigned to it. 
+The right graph in the first figure shows the cumulative amount of time it took for all of the workflows to run to completion. Additionally in \ref{fig:mem_use}, the memory usage is shown. The unit measured in the right graph of \ref{fig:mem_use} is the gigabyte hour and the graph displays the total amount of gigabyte hours allocated across all of the workflows as well as the actual amount of gigabyte hours used (based on each task’s peak RSS and execution time- this is the minimum amount of gigabyte hours which could have been assigned without the task being killed). The left graph of that figure shows the average memory usage across all of the tasks, where memory usages is considered the task’s peak RSS value divided by the total memory assigned to it. 
 
-From these graphs it is clear to see that all of the reinforcement learning approaches managed to improve CPU efficiency and allocate less CPU hours than both the default configuration and the feedback loop approach. In the case of the gradient bandit it was particularly effective at keeping the overall CPU hours assigned to an absolute minimum, however it seems that this efficiency came at the cost of speed, and it performed worse than its q-learning counterpart in this aspect, and took slightly longer than the default configuration. The q-learning approach took almost exactly the same amount of time as the feedback loop but was more efficient with regards to CPU usage. As can be seen, both of the reinforcement learning approaches are able to assign less CPU hours without having a detrimental effect on execution time (in fact the q-learning approach assigns less CPU hours but executes faster). Looking at the reward function \ref{q_agent_1_reward} for the q-learning agent the “CPU usage”considered by the function is not the task’s usage of the task but rather $max(90,CPU\_usage)$. As such agents for tasks which exhibit very high CPU usage ($>90\%$) receive no additional reward for increased efficiency (since efficiency can always be increased by decreasing the total number of CPUs assigned) so their rewards depend entirely on the execution time and they are thus encouraged to find resource allocations which decrease runtime. This most likely explains why the gradient bandit is more efficient but the q-learning agent is faster.
+From these graphs it is clear to see that all of the reinforcement learning approaches managed to improve CPU efficiency and allocate less CPU hours than the default configuration. In the case of the gradient bandit it was particularly effective at keeping the overall CPU hours assigned to an absolute minimum, however it seems that this efficiency came at the cost of speed, and it performed worse than its q-learning counterpart in this aspect and took slightly longer than the default configuration. The q-learning approach was faster than the default configuration and was more efficient with regards to CPU usage. As can be seen, both of the reinforcement learning approaches are able to assign less CPU hours without having a detrimental effect on execution time (in fact the q-learning approach assigns less CPU hours but executes faster). Looking at the reward function \ref{q_agent_1_reward} for the q-learning agent the “CPU usage”considered by the function is not the task’s usage of the task but rather $max(90,CPU\_usage)$. As such agents for tasks which exhibit very high CPU usage ($>90\%$) receive no additional reward for increased efficiency (since efficiency can always be increased by decreasing the total number of CPUs assigned) so their rewards depend entirely on the execution time and they are thus encouraged to find resource allocations which decrease runtime. This most likely explains why the gradient bandit is more efficient but the q-learning agent is faster.
 
-Interestingly, the feedback loop ultimately wound up increasing the effective CPU hours used by the workflows, something which had remained constant under the other 3 configurations, and the feedback loop approach was fairly efficient in terms of the total amount of CPU hours assigned- relative to the increased effective usage. It can only be speculated as to why it used more actual CPU hours than the other approaches but it may be down to the fact that certain highly parallelizable tasks will be assigned incredibly large numbers of CPUs (e.g. a task with 2800\% CPU usage during training will be assigned 28 CPUs) far beyond the point of diminishing returns, and eventually lead to the workflow using more effective CPU hours. This would indicate that assigning more resources may increase the amount actually used which the feedback loop approach assumes is false.
+When compared with the feedback loop, the gradient bandit is 11\% slower but uses 25\% less CPU hours, whilst the q-learning agent performs worse in every aspect but achieves similar values for CPU hours assigned and execution time (it assigned 7\% more CPU hours and was only 0.03\% slower). Ultimately the fact that the feedback loop approach assigns less CPU hours than the q-learning agent but is still faster indicates that the q-learning approach has not found the right balance between increased resource usage at the cost of faster execution, however the fact that the gradient bandits assigned proportionally less CPU hours than the factor by which it was slower than the feedback loop approach indicates it is able to balance reduced execution times for efficient CPU allocations.
 
-Finally, regarding execution time, it is interesting to see that the q-learning approach is able to match the performance of the feedback loop despite assigning less CPU hours overall. In this regard the q-learning approach could be considered optimal relative to the other approaches. The gradient bandit ultimately over-emphasized decreasing costs and performed worse whilst the feedback loop approach over-emphasized attempting to increase performance by increasing CPU usage and wound up using more resources than would have been necessary to achieve the same execution time. The q-learning agent was able to find the best balance between resource usage and performance. This is of course the benefit of a reinforcement learning approach- it can estimate the values of a complex reward function by exploring different actions and then pick the maximizing action. The feedback loop approach cannot explore different allocations on its own and is dependent on the correctness of its assumptions and the quality of its input data.
+Interestingly, the feedback loop ultimately wound up increasing the effective CPU hours used by the workflows, something which had remained constant under the other 3 configurations, and the feedback loop approach was actually quite efficient in terms of the total amount of CPU hours assigned- relative to the increased effective usage. It can only be speculated as to why it used more actual CPU hours than the other approaches but it may be down to the fact that certain highly parallelizable tasks will be assigned incredibly large numbers of CPUs (as an example a task with 2800\% CPU usage during training was assigned 28 CPUs), far beyond the point of diminishing returns, and eventually lead to the workflow using more effective CPU hours. This would indicate that assigning more resources may actually increase their usage, something which the feedback loop approach assumes is false.
 
-Concerning memory allocations, both of the reinforcement learning approaches proved to be better than the default configuration. One aspect which stands out is how poor the default configurations are. Indeed on average they are using just 5\% of the assigned memory on a task by task basis . On the other hand the q-learning approach is not much more efficient, however it still reduces the wasted memory by a large amount (~5000 gigabyte hours saved compared to the default configuration). Yet this amount is dwarfed by the other two approaches which save close to 15000 gigabyte hours. The memory bandit approach performed better than the q-learning approach by a significant margin and it assigned less than half as much as either the default configuration or the q-learning agent. The feedback loop approach is clearly the best, assigning the least amount of memory hours overall and showing very high memory usage for all of the tasks.
+Concerning memory allocations, both of the reinforcement learning approaches proved to be better than the default configuration. One aspect which stands out is how poor the default configurations are. Indeed on average they are using just 5\% of the assigned memory on a task by task basis . On the other hand the q-learning approach is not much more efficient, however it still reduces the wasted memory by a large amount (~5000 gigabyte hours saved compared to the default configuration). Yet this amount is dwarfed by the other two approaches which save close to 15000 gigabyte hours and reduce the memory assignments by 80 and 87 \% respectively. The gradient bandit approach performed better than the q-learning approach by a significant margin and it assigned less than half as much as either the default configuration or the q-learning agent. The feedback loop approach is clearly the best, assigning the least amount of memory hours overall and showing very high memory usage for all of the tasks.
 
-Ultimately the performance of the q-learning agent is down to the fact that the number of chunks of memory it could choose from was very low (in order to have less states so it could be trained faster), and thus it had a fairly limited extent to which it could reduce the memory usage. The gradient bandit suffers from this too because ultimately it also only had a fixed number of memory chunks to choose from and could only increase or decrease a task’s memory usage by a multiple of the size of the memory chunk. The feedback loop does not have this problem and can assign memory at the most granular level possible. It therefore follows that it would naturally be able to outperform these two approaches which can only assign “discrete” chunks of memory. Another factor to consider is that both of the reinforcement learning approaches also had the option to assign more memory than the default configuration. This was clearly unnecessary and because all of the tasks were using much less memory than the default amount it would have been possible to change the agents options to only be chunks of memory which added up to less than the default amount. This would have increased their performance. 
+Ultimately the performance of the q-learning agent is down to the fact that the number of chunks of memory it could choose from was very low (in order to have less states so it could be trained faster), and thus it had a fairly limited extent to which it could reduce the memory usage. The gradient bandit suffers from this too because ultimately it also only had a fixed number of memory chunks to choose from and could only increase or decrease a task’s memory usage by a multiple of the size of the memory chunk. The feedback loop does not have this problem and can assign memory at the most granular level possible. It therefore follows that it would naturally be able to outperform these two approaches which can only assign discrete chunks of memory. Another factor to consider is that both of the reinforcement learning approaches also had the option to assign more memory than the default configuration. This was clearly unnecessary, and because all of the tasks were using much less memory than the default amount it would have been possible to change the agents options to only be chunks of memory which added up to less than the default amount. This would have increased their performance. 
 
+This same problem which affected the q-learning agent’s memory allocation performance is also reflected (to an extent) in the CPU allocations, where the q-learning agent is inefficient, relative to the other two approaches, because it was given a limited number of CPU allocation options to choose from in order to keep its state-actions space small. 
+
+\subsection{Performance on a Workflow by Workflow Basis}
+\label{sub:per_wf}
+
+%\begin{figure}[ht]
+%\centering
+%\begin{subfigure}{.5\textwidth}
+% 	%\centering
+%        \includegraphics[width=\textwidth]{fig/per_wf_stats.png}
+%        \caption{CPU and Execution Time}
+%        \label{fig:per_wf_cpu}
+%\end{subfigure}%
+%\begin{subfigure}{.5\textwidth}
+% % \centering
+% 	\includegraphics[width=\textwidth]{fig/mem_use_per_wf.png}
+%	\caption{Memory}
+%	\label{fig:per_wf_mem}
+%\end{subfigure}
+%\caption{Example of Two Bandits Converging Too Fast}
+%%\label{fig:old_bandits}
+%\end{figure}
+
+\begin{figure}[h!]
+    \centering
+        \includegraphics[width=\textwidth]{fig/per_wf_stats.png}
+        \caption{CPU and Execution Time}
+        \label{fig:per_wf_cpu}
+\end{figure}
+
+\begin{figure}[h!]
+    \centering
+        \includegraphics[width=\textwidth]{fig/mem_use_per_wf.png}
+        \caption{Memory}
+        \label{fig:per_wf_mem}
+\end{figure}
+
+In this section the results are shown by workflow, the first figure, \ref{fig:per_wf_cpu} shows the CPU usage and execution time in two separate graphs, with the bars grouped together by workflow and labelled with the approach. The workflows in the top graph of figure \ref{fig:per_wf_cpu} correspond to the labels in the bottom graph. The second figure, \ref{fig:per_wf_mem}, in a similar fashion, shows the memory usage.
+
+It is quite difficult to find any outliers or patterns in this data and really the performance of the different approaches varies from one workflow to another, with each approach at one point or another being either the slowest or the fastest. Worth noting is of course the \textit{eager} workflow. While the CPU assignments and base usage are quite similar for most of the other workflows, with \textit{eager} the default configuration and the q-learning agent assign noticeably more CPU hours than are needed, however they achieve a faster execution time as a result. This indicates firstly that the authors of the workflow were most likely aware that there were tasks in this workflow which may have low CPU usage for periods of times but their execution speed still scales with more resources. Secondly this indicates that the q-learning agent was able to learn this and make the decision to assign more resources, even if the usage is low, because they decreased execution time. This is a direct result of the q-learning agent’s reward function, which is geared slightly more towards speed. Lastly it also indicates the need to account for Input/Output (I/O) intensive tasks. These tasks will generally have lower CPU usage because they must wait for system calls to complete read and write operations but may still benefit from increased CPUs because they are quite CPU intensive during their “off” time between I/O operations.
+
+Beyond this it can also be seen in the \textit{nanoseq} and \textit{mhcquant} workflows that the feedback loop assigns more CPU hours than any other workflow and it’s effective usage is a bit higher. This may indicate, as was speculated in \ref{sub:comp_perf}, that these workflows contain highly parallelizable tasks whose usage depends on the resource assignment.
 
 \subsection{Summary}
 \label{sub:summary}
 
-In conclusion all of the reinforcement learning approaches were able to intelligently size the tasks in the workflows and in the end the overall number of CPU hours which were wasted was reduced relative to both the feedback loop and the default configurations. In addition to this the agents were also able to significantly reduce the memory usage compared to the default configuration but struggled to reach the near-optimal performance of the feedback loop. The gradient bandit took slightly longer on average but was much more efficient for that, whilst the q-learning agent struck a better balance between resource efficiency and increased performance and the q-learning approach was ultimately able to outperform the default configurations in both resource efficiency and runtime.
+In conclusion all of the reinforcement learning approaches were able to intelligently size the tasks in the workflows and in the end the overall number of CPU hours which were wasted was reduced. In addition to this the agents were also able to significantly reduce the memory usage compared to the default configuration but struggled to reach the near-optimal performance of the feedback loop. The gradient bandit took slightly longer on average but was much more efficient for that, whilst the q-learning agent struck a better balance between resource efficiency and increased performance and the q-learning approach was ultimately able to outperform the default configurations in both resource efficiency and runtime.
 
-While it could be argued that the q-learning agent is therefore the “better” option it is hard to say exactly what the right approach is because it also depends on the desires of the user. Many scientists may be prepared to accept slightly longer runtimes if the “greediness” of their workflows is decreased and they are able to free up resources for others to use, or reduce their own costs (if they are paying for CPU hours). Indeed from a financial perspective the gradient bandit wastes significantly less CPU hours than the extra time it takes to complete, which is fairly marginal. However in a situation where the user is paying for the entire system and not for resource usage it may make more sense from a financial perspective to use the q-learning agent approach since it reduces the amount of time for which the system needs to be up by reducing the overall execution time. Finally, it should be pointed out that combining the feedback loop’s memory approach and a q-learning agent which only considers CPU assignments would yield the best overall performance.
+While it could be argued that the q-learning agent is therefore the “better” option it is hard to say exactly what the right approach is because it also depends on the desires of the user. Many scientists may be prepared to accept slightly longer runtimes if the “greediness” of their workflows is decreased and they are able to free up resources for others to use, or reduce their own costs (if they are paying for CPU hours). Indeed from a financial perspective the gradient bandit wastes significantly less CPU hours than the extra time it takes to complete, which is fairly marginal. However in a situation where the user is paying for the entire system and not for resource usage it may make more sense from a financial perspective to use the q-learning agent approach since it reduces the amount of time for which the system needs to be up by reducing the overall execution time.
