--- a/thesis.tex
+++ b/thesis.tex
@@ -186,11 +186,12 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 %%=========================================
 %Backmatter
 
-%\appendix
+\appendix
 %\include{backmatter/00_lessImportantText}
 %\include{backmatter/01_acronyms}
 %\include{backmatter/02_lexicon}
 %\include{backmatter/03_listings}
+\include{backmatter/04_example_qagent}
 % Include more appendices as required.
 
 \cleardoublepage
