--- a/mainmatter/06_conclusion.tex
+++ b/mainmatter/06_conclusion.tex
@@ -4,13 +4,13 @@
 \chapter{Conclusion and Outlook}
 \label{cha:conclusion}
 
-This thesis has looked at the use of reinforcement learning to size tasks in scientific workflows. It has provided background information on scientific workflows, scientific workflow managers, the gradient bandit problem, and q-learning in chapter \ref{cha:background}. It has discussed related work in chapter \ref{cha:related_work} and then incorporated gradient bandits and q-learning into a popular workflow manager in chapter \ref{cha:approach}. The performance of this approach was then tested against that of the default configurations and that of a feedback-loop based approach. In the evaluation this thesis found that the results had vastly improved on the default configuration and had matched the feedback loop approach for runtime performance while achieving greater CPU efficiency but worse memory efficiency.
+This thesis has looked at the use of reinforcement learning to size tasks in scientific workflows. It has provided background information on scientific workflows, scientific workflow managers, the gradient bandit problem, and q-learning in chapter \ref{cha:background}. It has discussed related work in chapter \ref{cha:related_work} and then incorporated gradient bandits and q-learning into a popular workflow manager in chapter \ref{cha:approach}. The performance of this approach was then tested against that of the default configurations and that of a feedback-loop based approach. In the evaluation this thesis found that the results had vastly improved on the default configuration and performed similarly with the feedback loop approach for runtime performance whilst achieving greater CPU efficiency but worse memory efficiency.
 
-This rest of this chapter briefly looks at what could be improved upon in section \ref{sec:pot_improvements} before section \ref{sec:implications} looks forwards and asks what implications this could have and what avenues might prove interesting for further research.
+This rest of this chapter briefly looks at what could be improved upon in section \ref{sec:improvements} before section \ref{sec:implications} looks forwards and asks what implications this could have and what avenues might prove interesting for further research.
 
 %%=========================================
-\section{Potential Improvements}
-\label{sec:pot_improvements}
+\section{Improvements}
+\label{sec:improvements}
 
 Immediately the most obvious way in which these approaches could be improved upon would be to incorporate read and write calls into the reward function. When a thread reads or writes characters from or to a device it must perform a system call and wait for it to complete, and during this time the thread cannot use the CPU. If a program has a high degree of parallel operations but also has to read and write lots of characters then it would probably have lower CPU usage (because of the system calls) but simultaneously would benefit from being assigned more CPUs. However because of the nature of the bandit and the agent’s reward functions it is unlikely that this task would be assigned more resources since read and write calls are not considered.
 
@@ -18,7 +18,7 @@ Moving along this train of thought, it could also be prudent to incorporate the 
 
 A different issue which was relevant to both approaches was the length of time needed to train the agents. The gradient bandit was trained for about 40 runs and the q-learning agent took 90 runs before they were “tested” across the next 10 runs. For large scale workflows this would take a considerable amount of time. Of course the agents are able to learn on the go and the performance during the training time is not so much worse as to make the workflows unusable during that time, so it is hard to say how much of a problem this could be.
 
-Specifically for the q-learning agent there is room for improvement by incorporating replay buffers and eligibility traces. These would enable the agent to update its value function for the states and actions which led it to its current state and this is could help to learn an optimal $Q$ function faster. This is not done in the current implementation and could have a significant impact on performance. Additionally an epsilon of $\epsilon = 1/t$ could be used to decrease the agent’s exploration proportional to the time.
+Specifically for the q-learning agent there is room for improvement by incorporating replay buffers and eligibility traces. These would enable the agent to update its value function for the states and actions which led it to its current state and this is could help to learn an optimal $Q$ function faster. This is not done in the current implementation and could have a significant impact on performance. Additionally an epsilon of $\epsilon = 1/t$ could be used to decrease the agent’s exploration proportional to the time. Additionally it may be more prudent to separate the memory assignments from the CPU assignments and instead co-locate a q-learning agent for CPU with one for memory. This is what was done for the gradient bandit and it would make sense for the q-learning agent too, the relationship between CPU and memory assignments can be split up as they are not hugely dependent on each other, and because it could then explore a larger state-action-space, and thus be trained faster or achieve better results by having more fine-grained allocation options.
 
 Finally, considering the testing set-up it would be an improvement to use kubernetes clusters with different machines to more accurately simulate the scenario where a workflow is performed on a larger distributed system with different nodes (with potentially heterogeneous resources). Such a set-up may also change results as the cumulative resources of the system would be greater, which may allows the agent’s decreased resource usage to increase throughput even more and thus speed up the workflows to a greater degree. It would also be better to use random inputs chosen from several different sets of possible inputs as opposed to repeating the workflows with the same input data. By training the agents using the same inputs there is a danger of overfitting the agents’ resource assignments. This may be less of a danger for the CPU assignments, because the character of a task’s CPU usage is less dependent on the size of the inputs, but repeatedly using the same inputs for an agent which sizes tasks for memory does present a real danger of overfitting. This is because the memory footprint of a task is much more dependent on the input to the task. This recommendation is not particularly relevant for those workflows which tend to have similarly sized inputs, but it could make a difference for workflows with different usage patterns.
 
