--- a/frontmatter/acknowledgment.tex
+++ b/frontmatter/acknowledgment.tex
@@ -8,7 +8,7 @@
 
 I would like to thank my advisor Jonathan for his helpful advice, constructive feedback and assistance, Prof. Dr. Toussaint, Prof. Dr. habil. Kao and Prof. Dr. Zubow whose courses I enjoyed immensely and from whom I learned a lot, and my friends and family for their support.
 
-\nocite{fan2020,learningToSchedule,scarl}
+\nocite{fan2020,learningToSchedule,scarl,toussaint}
 
 
 \begin{flushright}
