--- a/refs.bib
+++ b/refs.bib
@@ -241,3 +241,10 @@
   year={2020},
   organization={PMLR}
 }
+@misc{toussaint,
+  title={Introduction to Artifical Intelligence},
+  author={Marc Toussaint},
+  year={2020},
+  month=feb,
+  organization={Technische Universitaet Berlin}
+}
