--- a/thesis.tex
+++ b/thesis.tex
@@ -191,6 +191,7 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 %\include{backmatter/01_acronyms}
 %\include{backmatter/02_lexicon}
 %\include{backmatter/03_listings}
+%\include{backmatter/05_cpu_only_approaches}
 \include{backmatter/04_example_qagent}
 % Include more appendices as required.
 
